# fast26-artifact-evaluation

./: README.md
core/: Cargo.toml
core/benches/: bench.rs
core/src/: lib.rs
core/src/layers/1-crypto/: crypto_log.rs
core/src/layers/3-log/: tx_log.rs
core/src/layers/4-lsm/: sstable.rs  tx_lsm_tree.rs
core/src/layers/5-disk/: block_alloc.rs  config.rs  cost_stats.rs  dealloc_block.rs  gc.rs  mod.rs  segment.rs  sworndisk.rs  waf_stats.rs
core/src/os/: mod.rs
core/src/os/linux/: mod.rs
core/src/os/occlum/: mod.rs
core/src/os/std/: mod.rs
eval/: README.md
eval/sev/: .gitignore  README.md  guest_init.sh  mount_filesystems.sh  reset_crypt.sh  reset_sworn.sh  run_kernel.sh  umount_filesystems.sh
eval/sev/filebench/: .gitignore  README.md  download_and_build_filebench.sh  parse_filebench_results.sh  plot_result.py  preinstall_deps.sh  run.sh
eval/sev/filebench/workloads/: fileserver-template.f  oltp-template.f  varmail-template.f  videoserver-template.f
eval/sev/fio/: .gitignore  README.md  disable-fadvise.diff  download_and_build_fio.sh  plot_result.py  run.sh
eval/sev/fio/configs/: reproduce-read.fio  reproduce.fio
eval/sev/trace/: .gitignore  README.md  plot_result.py  run.sh  trace.cpp
eval/sev/ycsb/: POSTGRES_README.md  README.md  configure_postgres.sh  plot_result.py  run_boltdb_benchmark.sh  run_postgres_benchmark.sh  run_rocksdb_benchmark.sh  run_sqlite_benchmark.sh  setup.sh
eval/sev/ycsb/cpp-ycsb/: .gitignore  CMakeLists.txt  README.md  setup.sh
eval/sev/ycsb/cpp-ycsb/include/: db.h  rocksdb_db.h  statistics.h  workload.h
eval/sev/ycsb/cpp-ycsb/src/: main.cpp  rocksdb_db.cpp  workload.cpp
eval/sev/ycsb/workloads/: README.md  workloada  workloadb  workloade  workloadf
eval/sgx/: .gitignore  README.md
eval/sgx/cache_size/: .gitignore  README.md  cache_size.yaml  plot_result.py  reproduce.sh
eval/sgx/cache_size/configs/: rand-read-4k.fio  rand-write-4k.fio
eval/sgx/cleaning/: .gitignore  README.md  cleaning.cpp  cleaning.yaml  plot_result.py  reproduce.sh  run.sh
eval/sgx/cost_breakdown/: .gitignore  README.md  cost.yaml  plot_result.py  reproduce.sh  run_cost_benchmark.sh
eval/sgx/cost_breakdown/configs/: rand-read-layout.fio  rand-read.fio  rand-write.fio  seq-read-layout.fio  seq-read.fio  seq-write.fio
eval/sgx/disk_utility/: .gitignore  README.md  disk_age.yaml  plot_result.py  reproduce.sh  run_disk_age.sh
eval/sgx/disk_utility/configs/: rand-write-4k.fio  rand-write-90g-10steps.fio  seq-write-fill.fio
eval/sgx/filebench/: README.md  parse_filebench_results.sh  plot_result.py  reproduce.sh  run_workload.sh
eval/sgx/filebench/workloads/: fileserver-template.f  oltp-template.f  varmail-template.f  videoserver-template.f
eval/sgx/fio/: .gitignore  README.md  plot_result.py  reproduce.sh  run_fio_on_occlum.sh
eval/sgx/fio/configs/: fio-microbench.fio  fio-rand-read.fio  fio-rand-write.fio  fio-seq-write.fio  reproduce-read.fio  reproduce.fio
eval/sgx/optimization/: .gitignore  README.md  optimization.yaml  plot_result.py  reproduce.sh
eval/sgx/optimization/configs/: rand-read-4k.fio  rand-write-4k.fio
eval/sgx/trace/: .gitignore  README.md  analyze_trace.sh  plot_result.py  reproduce.sh  run_trace_bench.sh  trace.cpp  trace.yaml
