[package]
name = "sworndisk-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
bindings = { path = "../linux/bindings", optional = true }
inherit-methods-macro = {git = "https://github.com/asterinas/inherit-methods-macro", rev = "98f7e3e"}
pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }

anymap = { git = "https://github.com/lucassong-mh/anymap", branch = "1.0.0-beta.2-patched", default-features = false, features = ["hashbrown"] }
array-init = "2.1.0"
bittle = "0.5.6"
crossbeam-queue = { version = "=0.3.11", default-features = false, features = ["alloc"] }
hashbrown = { version = "=0.14.3", features = ["serde"]  }
lending-iterator = "=0.1.7"
log = { version = "0.4", optional =  true }
lru = "=0.12.3"
time = "=0.3.36"
openssl = { version = "0.10.55", optional = true }
postcard = "=1.0.6"
serde = { version = "=1.0.188", default-features = false, features = ["alloc", "derive"] }
spin = { version = "0.9.8", optional = true }
static_assertions = "1.1.0"

sgx_tstd = { path = "../../../deps/rust-sgx-sdk/sgx_tstd", features = ["backtrace", "thread"], optional = true }
sgx_rand = { path = "../../../deps/rust-sgx-sdk/sgx_rand", optional = true }
sgx_tcrypto = { path = "../../../deps/rust-sgx-sdk/sgx_tcrypto", optional = true }
sgx_types = { path = "../../../deps/rust-sgx-sdk/sgx_types", optional = true }
ext2-rs = { path = "../../../deps/ext2-rs", default-features = false, optional = true }
ahash = { version="=0.8.6", default-features = false }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] } # Implies nightly

[features]
default = ["std"]
std = ["spin", "openssl", "log"]
linux = ["bindings"]
occlum = ["sgx_tstd", "sgx_rand", "sgx_tcrypto", "sgx_types", "spin", "log", "ext2-rs/sgx"]
jinux = []


[lib]
doctest = false

[dev-dependencies]
libc = "=0.2.147"
env_logger = "0.11.5"

[[bench]]
name = "bench"
harness = false
